gcc/testsuite/rust/rustc/ui/parser/bad-match.rs
fn main() {
  let isize x = 5; // { dg-error "" "" { target *-*-* } }
  match x;
}

